# Sentient-Playground

./: .gitignore  Procfile  README.md  build.sh  docker-compose.yml  package.json  pyproject.toml  railway.toml
agent-service/: .env.example  main.py  requirements.txt
agent-service/agents/: __init__.py  educational_router.py  realtime_grid_agent.py
agent-service/models/: database.py
agent-service/static/: demo.html  index.html  settings.html
web/: .env.example  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx  page_backup.tsx
web/app/learn/: page.tsx
web/app/playground/: page.tsx
web/prisma/: schema.prisma
