[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.0",
    "anthropic>=0.71.0",
    "asyncpg>=0.30.0",
    "bcrypt>=5.0.0",
    "dspy-ai>=3.0.3",
    "fastapi>=0.120.0",
    "httpx>=0.28.1",
    "litellm>=1.79.0",
    "openai>=2.6.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "python-socketio>=5.14.2",
    "sqlalchemy>=2.0.44",
    "structlog>=25.4.0",
    "uvicorn[standard]>=0.38.0",
]
